# sol-tx-parser-capi

./: .gitignore  Makefile  README.md  go.mod  go.sum
.github/workflows/: publish.yml
capi/: main.go  parser.go  parser.h  parser_test.go
python/: README.md  pyproject.toml
python/src/solana_tx_parser/: parser.py
python/src/solana_tx_parser/lib/: libsoltxparser.h
