[project]
name = "solana-tx-parser"
version = "0.0.1"
description = "Python bindings for Solana transaction parser"
authors = [
    {name = "mkdir700", email = "mkdir700@gmail.com"},
]
dependencies = [
    "pytest>=8.3.3",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.dev-dependencies]
test = [
    "pytest>=8.3.3",
]

[tool.pdm.build]
package-dir = "src"
includes = [
    "src/solana_tx_parser/lib/*.so",    # Linux
    "src/solana_tx_parser/lib/*.dylib", # macOS
    "src/solana_tx_parser/lib/*.dll",   # Windows
]
