[project]
name = "solana-tx-parser"
version = "0.0.5"
description = "Python bindings for Solana Transaction Parser (tx-parser), enabling Python developers to easily parse and analyze Solana blockchain transactions. This package provides a high-performance C-API wrapper around the original Rust implementation, making blockchain data interpretation accessible in Python while maintaining native-like performance."
authors = [
    {name = "mkdir700", email = "mkdir700@gmail.com"},
]
dependencies = []
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.dev-dependencies]
test = [
    "pytest>=8.3.3",
]

[tool.pdm.build]
package-dir = "src"
includes = [
    "src/solana_tx_parser/**/*.py",     # Python source files
    "src/solana_tx_parser/lib/*.so",    # Linux
    "src/solana_tx_parser/lib/*.dylib", # macOS
    "src/solana_tx_parser/lib/*.dll",   # Windows
]
